--- a/views/feedbackpage.ejs
+++ b/views/feedbackpage.ejs
@@ -69,7 +69,7 @@
                             <span class="nav-label">會員管理</span>
                         </a>
                     </li>
-                    <li class="has-submenu">
+                    <li class="has-submenu active">
                         <a href="feedbackpage">
                             <i class="fas fa-book-medical"></i>
                             <span class="nav-label">會員回報訊息</span>
