--- a/views/memberadmin.ejs
+++ b/views/memberadmin.ejs
@@ -63,7 +63,7 @@
                             <span class="nav-label">領養人資訊</span>
                         </a>
                     </li>
-                    <li class="has-submenu">
+                    <li class="has-submenu active">
                         <a href="memberadmin">
                             <i class="fas fa-calendar-plus"></i>
                             <span class="nav-label">會員管理</span>
