--- a/views/memberno.ejs
+++ b/views/memberno.ejs
@@ -37,7 +37,7 @@
                             <span class="nav-label">Dashboard</span>
                         </a>
                     </li>
-                    <li class="has-submenu active">
+                    <li class="has-submenu">
                         <a href="#" class="has-arrow mm-collapsed">
                             <i class="fas fa-user-md"></i>
                             <span class="nav-label">管理動物資料</span>
@@ -64,7 +64,7 @@
                             <span class="nav-label">領養人資訊</span>
                         </a>
                     </li>
-                    <li class="has-submenu">
+                    <li class="has-submenu active">
                         <a href="memberadmin">
                             <i class="fas fa-calendar-plus"></i>
                             <span class="nav-label">會員管理</span>
@@ -223,7 +223,7 @@
                         </div>
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="empindex">Home</a></li>
+                                <li class="breadcrumb-item"><a href="empindex">首頁</a></li>
                                 <li class="breadcrumb-item active"><a href="memberno">編輯會員資料</a></li>
                             </ol>
                         </div>
