--- a/views/adopterdetail.ejs
+++ b/views/adopterdetail.ejs
@@ -57,7 +57,7 @@
                             <li><a href="allevent">全部活動</a></li>
                         </ul>
                     </li>-->
-                    <li class="has-submenu">
+                    <li class="has-submenu active">
                         <a href="adopterdetail">
                             <i class="fas fa-calendar-plus"></i>
                             <span class="nav-label">領養人資訊</span>
