--- a/views/animalupdateno.ejs
+++ b/views/animalupdateno.ejs
@@ -222,7 +222,7 @@
                         </div>
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="empindex">Home</a></li>
+                                <li class="breadcrumb-item"><a href="empindex">首頁</a></li>
                                 <li class="breadcrumb-item active"><a href="animalupdateno">更新動物</a></li>
                             </ol>
                         </div>
