會員生日預設 max="2012-12-31" + 新增動物性別select預設母

--- a/views/editbackmember.ejs
+++ b/views/editbackmember.ejs
@@ -293,7 +293,7 @@
                                                         </div>
                                                         <div class="form-group">
                                                             <span>生日:</span>
-                                                            <input type="date" name="m_birth" class="form-control" value=<%=item.m_birth %> >
+                                                            <input type="date" name="m_birth" class="form-control" max="2012-12-31" value=<%=item.m_birth %> >
                                                         </div>
                                                         <div class="form-group">
                                                             <span>性別:<a id="msex" style="color: #ffffff;"><%=item.m_sex %></span><br />
