--- a/views/register.ejs
+++ b/views/register.ejs
@@ -94,7 +94,7 @@ shrink-to-fit=no"
     <p></p>
     電話: <input type="text" name="m_phone" oninput = "value=value.replace(/[^\d]/g,'')">
     <p></p>
-    生日: <input type="date" name="m_birth">
+    生日: <input type="date" name="m_birth" max="2012-12-31">
     <p></p>
     性別:<select name="m_sex">
       <option value="男">男</option>
