--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -103,7 +103,7 @@
                         <table>
                             </select> </td>
                             <td>
-                                <p>生日:<br /><input type="date" name="m_birth" value=<%=item.m_birth %> ></p>
+                                <p>生日:<br /><input type="date" name="m_birth" max="2012-12-31" value=<%=item.m_birth %> ></p>
                             </td>
                         </table>
 
